# my-property-data

./: .env  Cargo.toml  Makefile  package.json  vite.config.ts
crates/entity/: Cargo.toml
crates/entity/src/: budget.rs  flow.rs  lib.rs  tag.rs  user.rs
crates/error-code/src/: lib.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: m20220101_000001_create_table.rs
crates/property/: Cargo.toml
crates/property/src/: account.rs  budget.rs  flow.rs  lib.rs
migrations/: 20220618134915_create_tables.sql
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/entity/: Cargo.toml
src-tauri/crates/entity/src/: budget.rs  flow.rs  lib.rs  tag.rs  user.rs
src-tauri/crates/error-code/: Cargo.toml
src-tauri/crates/property/src/: budget.rs  lib.rs
src-tauri/src/: budget_command.rs  main.rs  tag_command.rs  user_command.rs
src/components/Dialog/: BootstrapDialog.tsx  index.ts
src/components/Navigation/: Navigation.tsx
src/containers/Account/: Account.tsx  AddDialog.tsx  Board.tsx  index.ts
src/containers/Authentication/: Login.tsx  Register.tsx  index.tsx
src/containers/Budget/: AddBudget.tsx  Board.tsx  index.ts
src/containers/CreateData/: Account.tsx  CreateDataBoard.tsx  Flow.tsx  index.tsx
src/containers/DashBoard/: LineChart.tsx  index.tsx
src/containers/Flow/: AddFlow.tsx  Board.tsx  index.ts
src/containers/Home/: Home.tsx  HomeBar.tsx  HomeSider.tsx  index.tsx
src/containers/Tag/: AddDialog.tsx  Board.tsx  index.ts
src/reducers/: app.ts  budget.ts  index.ts  tag.ts  user.ts
src/utils/: backend.ts  propertyReactNodeManager.tsx  routes.tsx
