[package]
name = "my-property-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "crates/*"
]

[dependencies.property]
path = "./crates/property"

[dependencies.entity]
path = "./crates/entity"

[dependencies.tokio]
version = "1.0" 
features = ["full"]